--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,10 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^4.3.1",
+    "remeda": "^1.43.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
