--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,8 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@wavesurfer/react": "^1.0.4",
+    "chakra-dayzed-datepicker": "^0.2.10",
+    "dayzed": "^3.2.3",
     "firebase": "^10.8.0",
     "framer-motion": "^6",
     "lucide-react": "^0.321.0",
