Build before deploying
Signed-off-by: Tyler Rockwood <rockwood@redpanda.com>

--- a/firebase.json
+++ b/firebase.json
@@ -41,6 +41,7 @@
         "**/.*",
         "**/node_modules/**"
       ],
+      "predeploy": "cd admin && bun run build",
       "rewrites": [
         {
           "source": "**",
